service TestServer{
	string add_and_get_msg(1:string msg)
}
